Updating for release of version 0.0.2

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for App-watchdo
 
+0.0.2   2015-06-23
+        Updating for release of version 0.0.2
+        Removed unneeded tag (Ivan Wills)
+
 0.0.1   2015-03-29
         Updated dependencies (Ivan Wills)
         Fixed up tests (Ivan Wills)
