--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-watchdo
 
+0.0.3   2015-08-19
+        Updating for release of version 0.0.3
+        Removed creation of makefile (Ivan Wills)
+        Added Perl 5.22 to list of perl versions to build with (Ivan Wills)
+
 0.0.2   2015-06-23
         Updating for release of version 0.0.2
         Removed unneeded tag (Ivan Wills)
